--- a/api-gateway/package.json
+++ b/api-gateway/package.json
@@ -12,7 +12,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-rate-limit": "^7.4.0",
     "helmet": "^7.1.0",
+    "http-proxy": "^1.18.1",
     "http-proxy-middleware": "^3.0.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0"
